# 1d-fem-rs

./: Cargo.toml
src/: analytical_solution.rs  input_parameters.rs  main.rs  mesh_generator.rs  solver.rs
