[package]
name = "axisymmetric-fem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.10.0", default-features = false, features = ["openblas"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }